--- a/assets/less/global/lib/patterns.less
+++ b/assets/less/global/lib/patterns.less
@@ -38,3 +38,14 @@ div:nth-last-child(1) {
 		}
 	}
 }
+
+
+// Add to Cart button
+.add-to-cart i {
+	background: url(../../img/global/add-to-cart-icon.png) no-repeat;
+	width: 18px;
+	height: 16px;
+	margin-right: 5px;
+	position: relative;
+	top: -1px;
+}
