--- a/assets/less/global/fonts.less
+++ b/assets/less/global/fonts.less
@@ -30,3 +30,16 @@
     font-weight: normal;
     font-style: normal;
 }
+
+// DinPro Bold (titling)
+// --------------------------------------------------
+
+@font-face {
+    font-family: 'poo';
+    src: url('../../fonts/DinPro/DinPro-webfont.eot');
+    src: url('../../fonts/DinPro/DinPro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/DinPro/DinPro-webfont.woff') format('woff'),
+         url('../../fonts/DinPro/DinPro-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
