--- a/assets/less/global/lib/dropdowns.less
+++ b/assets/less/global/lib/dropdowns.less
@@ -116,8 +116,8 @@
 
   .dropdown-toggle {
     color: @white;
-    background: #ccc;
-    background: rgba(0,0,0,.3);
+    //background: #ccc;
+    //background: rgba(0,0,0,.3);
   }
   .dropdown-menu {
     display: block;
