--- a/assets/css/global/style.css
+++ b/assets/css/global/style.css
@@ -3834,6 +3834,48 @@ header {
 #primary .menubar .appliances a:hover i {
   background-position: 0 0;
 }
+#primary #subnav {
+  background-image: url(../../img/nav/subnav-bg.jpg);
+}
+#primary #subnav .container {
+  padding-top: 20px;
+  margin-top: -20px;
+}
+#primary #subnav a {
+  color: #fff;
+  text-shadow: 0px 1px 1px #000;
+  filter: dropshadow(color=#000000, offx=0, offy=1);
+  font-size: 13px;
+}
+#primary #subnav a.nav-title {
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+#primary #subnav .nav-content {
+  width: 720px;
+  float: left;
+  border-right: #272727 solid 1px;
+}
+#primary #subnav .nav-marketing {
+  width: 220px;
+  float: right;
+  border-left: #525252 solid 1px;
+}
+#primary #subnav .nav-column {
+  width: 160px;
+  float: left;
+  padding-right: 10px;
+}
+#primary #subnav .nav-column.last {
+  padding-right: 0;
+}
+#primary #subnav .nav-column ul {
+  margin: 0;
+}
+#primary #subnav .nav-column li {
+  list-style: none;
+}
 .about-vdc {
   color: #b3b3b3;
   padding: 0 20px;
