--- a/assets/less/global/navigation.less
+++ b/assets/less/global/navigation.less
@@ -76,4 +76,50 @@
 			&:hover i {background-position: 0 0;}
 		}
 	}
+	// SUB NAVIGATION
+	// --------------------------------------------------
+	
+	#subnav {
+		background-image:url(../../img/nav/subnav-bg.jpg);
+		.container {
+			padding-top: 20px;
+			margin-top: -20px;
+		}
+		a {
+			color: #fff;
+			text-shadow: 0px 1px 1px #000;
+			filter: dropshadow(color=#000, offx=0, offy=1);
+			font-size: 13px;
+			&.nav-title {
+				font-size: 14px;
+				font-weight: bold;
+				text-transform: uppercase;
+			}
+		}
+		.nav-content {
+			width: 720px;
+			float: left;
+			border-right: #272727 solid 1px;
+		}
+		.nav-marketing {
+			width: 220px;
+			float: right;
+			border-left: #525252 solid 1px;
+		}
+		.nav-column {
+			width: 160px;
+			float: left;
+			padding-right: 10px;
+			&.last {
+				padding-right: 0;
+			}
+			ul {
+				margin: 0;
+			}
+			li {
+				list-style: none;
+			}
+		}
+	}	
 }
+
