--- a/assets/css/global/style.css
+++ b/assets/css/global/style.css
@@ -3736,6 +3736,7 @@ header {
   top: -20px;
 }
 #primary .menubar {
+  position: relative;
   border: 1px solid #a6a6a6;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -3751,6 +3752,7 @@ header {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fefefe', endColorstr='#d2d2d2', GradientType=0);
   list-style: none;
   height: 38px;
+  z-index: 2;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -3835,11 +3837,26 @@ header {
   background-position: 0 0;
 }
 #primary #subnav {
+  display: none;
   background-image: url(../../img/nav/subnav-bg.jpg);
+  background-repeat: repeat;
+  position: relative;
+  z-index: 1;
+  -webkit-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
 }
 #primary #subnav .container {
-  padding-top: 20px;
+  padding: 40px 0 20px 0;
   margin-top: -20px;
+}
+#primary #subnav .container h2 {
+  margin-bottom: 20px;
+  font-weight: 900;
+  color: #353535;
+  font-size: 32px;
+  text-shadow: 0px 1px 0px #5d5d5d;
+  filter: dropshadow(color=#5d5d5d, offx=0, offy=1);
 }
 #primary #subnav a {
   color: #fff;
@@ -3855,19 +3872,31 @@ header {
 #primary #subnav .nav-content {
   width: 720px;
   float: left;
-  border-right: #272727 solid 1px;
+  border-right: 1px solid rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
+  -moz-box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
+  box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
 }
 #primary #subnav .nav-marketing {
-  width: 220px;
+  width: 200px;
   float: right;
-  border-left: #525252 solid 1px;
+  text-align: center;
+}
+#primary #subnav .nav-marketing .nav-messaging {
+  background-color: #FFF;
+  display: inline-block;
+  width: 180px;
+  height: 220px;
+  position: absolute;
+  top: 50%;
+  margin-top: -100px;
 }
 #primary #subnav .nav-column {
   width: 160px;
   float: left;
-  padding-right: 10px;
+  padding-right: 25px;
 }
-#primary #subnav .nav-column.last {
+#primary #subnav .nav-column:last-child {
   padding-right: 0;
 }
 #primary #subnav .nav-column ul {
