--- a/assets/less/global/navigation.less
+++ b/assets/less/global/navigation.less
@@ -9,11 +9,13 @@
 	position: relative;
 	top: -20px;
 	.menubar {
+		position: relative;
 		border: 1px solid #a6a6a6;
 		.border-radius(3px);
 		#gradient > .vertical(#fefefe, #d2d2d2);
 		list-style: none;
 		height: 38px;
+		z-index: 2;
 		.box-shadow(0 1px 2px rgba(0,0,0,0.1);
 		margin-bottom: 0;
 		text-align: center;
@@ -80,10 +82,26 @@
 	// --------------------------------------------------
 	
 	#subnav {
+		display:none;
 		background-image:url(../../img/nav/subnav-bg.jpg);
+		background-repeat: repeat;
+		position: relative;
+		z-index: 1;
+		-webkit-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, .5);
+		-moz-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, .5);
+		box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, .5);
 		.container {
-			padding-top: 20px;
+			padding: 40px 0 20px 0;
 			margin-top: -20px;
+			h2 {
+				margin-bottom: 20px;
+				font-weight: 900;
+				color: #353535;
+				font-size: 32px;
+				text-shadow: 0px 1px 0px #5d5d5d;
+				filter: dropshadow(color=#5d5d5d, offx=0, offy=1);
+
+			}
 		}
 		a {
 			color: #fff;
@@ -99,18 +117,30 @@
 		.nav-content {
 			width: 720px;
 			float: left;
-			border-right: #272727 solid 1px;
+			border-right: 1px solid rgba(0,0,0,0.4);
+			-webkit-box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
+			-moz-box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
+			box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
 		}
 		.nav-marketing {
-			width: 220px;
+			width: 200px;
 			float: right;
-			border-left: #525252 solid 1px;
+			text-align: center;
+			.nav-messaging {
+				background-color:#FFF;
+				display: inline-block;
+				width: 180px;
+				height: 220px;
+				position: absolute;
+				top: 50%;
+				margin-top: -100px;
+			}
 		}
 		.nav-column {
 			width: 160px;
 			float: left;
-			padding-right: 10px;
-			&.last {
+			padding-right: 25px;
+			&:last-child {
 				padding-right: 0;
 			}
 			ul {
