--- a/assets/less/global/navigation.less
+++ b/assets/less/global/navigation.less
@@ -85,6 +85,7 @@
 		display:none;
 		background-image:url(../../img/nav/subnav-bg.jpg);
 		background-repeat: repeat;
+		top: -20px;
 		position: relative;
 		z-index: 1;
 		-webkit-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, .5);
@@ -92,7 +93,6 @@
 		box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, .5);
 		.container {
 			padding: 40px 0 20px 0;
-			margin-top: -20px;
 			h2 {
 				margin-bottom: 20px;
 				font-weight: 900;
@@ -125,7 +125,7 @@
 		.nav-marketing {
 			width: 200px;
 			float: right;
-			text-align: center;
+			display:none;
 			.nav-messaging {
 				background-color:#FFF;
 				display: inline-block;
