--- a/assets/less/global/navigation.less
+++ b/assets/less/global/navigation.less
@@ -26,10 +26,13 @@
 			border-bottom: 1px solid #d7d7d7;
 			&:first-child {
 				border-left: 0;
-				margin-left: 3px;
+				padding-left: 3px;
 			}
 			&:hover {
 				#gradient > .vertical(#fafafa, #cfcfcf);
+			}
+			&:last-child {
+				padding-right: 4px;
 			}
 			a {
 				color: #595959;
@@ -49,6 +52,33 @@
 					height: 25px;
 					margin-top: -5px;
 					background-image: url(../../img/nav/nav-sprites.png);
+				}
+			}
+			&.active {
+				border-left: solid 1px #414141;
+				border-top: solid 1px #414141;
+				border-bottom: solid 1px #414141;
+		        -webkit-box-shadow: inset 0px 1px 5px 0px rgba(0, 0, 0, 54);
+		        -moz-box-shadow: inset 0px 1px 5px 0px rgba(0, 0, 0, 54);
+		        box-shadow: inset 0px 1px 5px 0px rgba(0, 0, 0, 54);
+		        background: #525252; /* Old browsers */
+				background: -moz-linear-gradient(top,  #525252 0%, #828282 100%); /* FF3.6+ */
+				background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#525252), color-stop(100%,#828282)); /* Chrome,Safari4+ */
+				background: -webkit-linear-gradient(top,  #525252 0%,#828282 100%); /* Chrome10+,Safari5.1+ */
+				background: -o-linear-gradient(top,  #525252 0%,#828282 100%); /* Opera 11.10+ */
+				background: -ms-linear-gradient(top,  #525252 0%,#828282 100%); /* IE10+ */
+				background: linear-gradient(top,  #525252 0%,#828282 100%); /* W3C */
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#525252', endColorstr='#828282',GradientType=0 ); /* IE6-9 */
+				&:first-child {
+					border-left:0;
+				}        	
+				a {
+					color: #dadada;	
+			        text-shadow: 0px 1px 0px #000000;
+			        filter: dropshadow(color=#000000, offx=0, offy=1);
+			        i {
+			        	background-image:url(../../img/nav/nav-active-sprites.png);
+			        }
 				}
 			}
 		}
@@ -77,6 +107,26 @@
 			i {background-position: 0 -75px;}
 			&:hover i {background-position: 0 0;}
 		}
+		
+		// Active states
+		
+		.tv.active a {
+			i {background-position: 0 -180px;}
+		}
+		.audio.active a {
+			i {background-position: 0 -90px;}		}
+		.portable.active a {
+			i {	background-position: 0 -225px;}
+		}
+		.computers.active a {
+			i {	background-position: 0 -45px;}
+		}
+		.cameras.active a {
+			i {background-position: 0 -135px;}
+		}
+		.appliances.active a {
+			i {background-position: 0 0}
+		}
 	}
 	// SUB NAVIGATION
 	// --------------------------------------------------
@@ -96,7 +146,7 @@
 			h2 {
 				margin-bottom: 20px;
 				font-weight: 900;
-				color: #353535;
+				color: #262626;
 				font-size: 32px;
 				text-shadow: 0px 1px 0px #5d5d5d;
 				filter: dropshadow(color=#5d5d5d, offx=0, offy=1);
